--- a/new_front_end/index.html
+++ b/new_front_end/index.html
@@ -18,11 +18,12 @@
         </div>
         <nav>
           <ul>
-            <li><a href="about.html">Signup</a></li>
-            <li><a href="about.html">Login</a></li>
+            <li><a href="signup.html">Signup</a></li>
+            <li><a href="login.html">Login</a></li>
             <li class="current"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
+            <li><a href="profile.html">Profile</a></li>
           </ul>
         </nav>
       </div>
