--- a/new_front_end/signup.html
+++ b/new_front_end/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Affordable and professional web design services">
     <meta name="auther" content="Brenton Moodley">
-    <title>Camagru | About</title>
+    <title>Camagru | Sign up</title>
     <link rel="stylesheet", href="reactive.css">
   </head>
   <body>
@@ -18,10 +18,10 @@
         </div>
         <nav>
           <ul>
-            <li><a href="signup.html">Signup</a></li>
+            <li class ="current"><a href="signup.html">Signup</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="index.html">Home</a></li>
-            <li class="current"><a href="about.html">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="profile.html">Profile</a></li>
           </ul>
@@ -41,11 +41,24 @@
 
     <section id="main">
       <div class="container">
-        <article id="main-col">
-          <h1 class="page-title">About Us</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis nunc dui. Aenean bibendum varius eros, at vestibulum dui iaculis quis. Nam facilisis massa enim, ut tincidunt massa vehicula rhoncus. Ut fermentum vehicula augue, a blandit velit dictum et. Fusce tempor pharetra elit, a sodales nibh varius at. Pellentesque augue turpis, feugiat sit amet lacinia at, auctor et justo. Nulla eu justo dapibus, tempor eros fringilla, convallis nunc. Donec maximus ornare nibh ut sollicitudin. Nunc commodo felis in iaculis pellentesque.</p>
-          <p class="dark">Suspendisse a velit cursus, sagittis est sed, hendrerit nunc. Nulla finibus viverra faucibus. Cras vitae congue purus. Donec porta mauris ac ante tristique, eu finibus diam finibus. Aenean laoreet mattis viverra. Maecenas dignissim, tellus et cursus malesuada, lectus purus rhoncus sapien, et euismod magna mauris ac ligula. Vestibulum vitae sollicitudin neque. Sed enim diam, egestas eu lorem quis, sagittis bibendum eros. Proin velit risus, ornare et purus vitae, malesuada consectetur odio. Maecenas eget imperdiet nisl, id auctor mauris. Suspendisse tortor ex, vestibulum id est vel, commodo posuere nisl. Praesent volutpat sodales mi eget sollicitudin. Maecenas in odio justo.</p>
-        </article>
+        <div>
+          <h3>Sign up or <a href="login.html">Log in</a></h3>
+          <form class="quote">
+            <div>
+              <label>Email</label><br>
+              <input type="text" aciton="" value="" name="email" placeholder="example@mail.com">
+            </div>
+            <div>
+              <label>Username</label><br>
+              <input type="text" aciton="" value="" name="username" placeholder="JohnDoe72">
+            </div>
+            <div>
+              <label>Password</label><br>
+            <input type="password" aciton="" value="" name="password" placeholder="password">
+            </div>
+            <input type="submit" value="signup" name="signupBtn">
+          </form>
+        </div>
 
         <aside id="sidebar">
           <div class="dark">
